change counting time

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <p>
             Keep in mind that incorrect answers will penalize your score/time
           </p>
-          <p>by sixty seconds</p>
+          <p>by Seventy Five Seconds</p>
         </div>
         <div class="startbtn" id="btnstart">
           <p>start quiz</p>
