--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
           </p>
           <p>
             Keep in mind that incorrect answers will penalize your score/time
-          </p>
-          <p>by Seventy Five Seconds</p>
+          </p> 
         </div>
         <div class="startbtn" id="btnstart">
-          <p>start quiz</p>
+          <p>Start Quiz</p>
         </div>
       </div>
       <div id="one">
